refactor(ReservationWaitingService): 불변 제거